* 6.1.0 prerelease July 27 2015
- More intuitive usage  with multiple root-level nodes (like parsing an AJAX
request). Add `getRootNodes` function to return a list of root nodes, and
abstracted a little magic of the previous handling of multiple root nodes.
They always worked before, but easier to work WITH now.

* 6.0.1 June 27 2015
- Add more docstrings and add pydoc documentation

* 6.0.0 June 23 2015
- Split Indexing out into new IndexedAdvancedHTMLParser class to greatly
simplify the base class.
- Get rid of the onlyIndex* on the default constructor of
IndexedAdvancedHTMLParser, make all fields indexed by default, and add
useIndex to every get* method which can be set to False to ignore the index
- Add an indexed_example
- Modify example to include addition of element
- Split source into several files
- Simplify a few sections
- Ensure formatHTML ends with a newline

* 5.0.1 June 10 2015
 - Add AdvancedHTMLFormatter class and formatHTML Script
 - Add getFormattedHTML to AdvancedHTMLParser
 - Fix (invalid for html, but okay for subsections) multiple root node support
 - Auto-set isSelfClosing on an AdvancedTag when they are created ad-hoc.

* 4.0.1 June 9 2015
 - Also add input, img, hr, br to self-closing tags and make a set

* 4.0.0 June 9 2015
 - Fix handling of entities, character refs and comments
 - Add support for including doctype
 - Fix issues with getHTML
 - Implicitly close "meta" and "link" tags if they are not self-closed.
 - Better-support self-closing tags overall
 - Handle people who do not close child tags before closing parent
 - Unicode support