@@ -153,6 +153,16 @@ Use&nbsp;the&nbsp;getters&nbsp;and&nbsp;setters&nbsp;instead&nbsp;of&nbsp;attrib
 &nbsp;<br>
 @return&nbsp;-&nbsp;String&nbsp;of&nbsp;start&nbsp;tag&nbsp;with&nbsp;attributes</tt></dd></dl>
 
+<dl><dt><a name="AdvancedTag-getStyle"><strong>getStyle</strong></a>(self, styleName)</dt><dd><tt>getStyle&nbsp;-&nbsp;Gets&nbsp;the&nbsp;value&nbsp;of&nbsp;a&nbsp;style&nbsp;paramater,&nbsp;part&nbsp;of&nbsp;the&nbsp;"style"&nbsp;attribute<br>
+&nbsp;<br>
+@param&nbsp;styleName&nbsp;-&nbsp;The&nbsp;name&nbsp;of&nbsp;the&nbsp;style<br>
+&nbsp;<br>
+@return&nbsp;-&nbsp;String&nbsp;of&nbsp;the&nbsp;value&nbsp;of&nbsp;the&nbsp;style.&nbsp;''&nbsp;is&nbsp;no&nbsp;value.</tt></dd></dl>
+
+<dl><dt><a name="AdvancedTag-getStyleDict"><strong>getStyleDict</strong></a>(self)</dt><dd><tt>getStyleDict&nbsp;-&nbsp;Gets&nbsp;a&nbsp;dictionary&nbsp;of&nbsp;style&nbsp;attribute/value&nbsp;pairs.<br>
+&nbsp;<br>
+@return&nbsp;-&nbsp;OrderedDict&nbsp;of&nbsp;"style"&nbsp;attribute.</tt></dd></dl>
+
 <dl><dt><a name="AdvancedTag-getTagName"><strong>getTagName</strong></a>(self)</dt><dd><tt>getTagName&nbsp;-&nbsp;Gets&nbsp;the&nbsp;tag&nbsp;name&nbsp;of&nbsp;this&nbsp;Tag.<br>
 &nbsp;<br>
 @return&nbsp;-&nbsp;str</tt></dd></dl>
@@ -169,6 +179,10 @@ Use&nbsp;the&nbsp;getters&nbsp;and&nbsp;setters&nbsp;instead&nbsp;of&nbsp;attrib
 &nbsp;<br>
 @param&nbsp;className&nbsp;-&nbsp;A&nbsp;class&nbsp;to&nbsp;search</tt></dd></dl>
 
+<dl><dt><a name="AdvancedTag-removeAttribute"><strong>removeAttribute</strong></a>(self, attrName)</dt><dd><tt>removeAttribute&nbsp;-&nbsp;Removes&nbsp;an&nbsp;attribute,&nbsp;by&nbsp;name.<br>
+&nbsp;<br>
+@param&nbsp;attrName&nbsp;&lt;str&gt;&nbsp;-&nbsp;The&nbsp;attribute&nbsp;name</tt></dd></dl>
+
 <dl><dt><a name="AdvancedTag-removeChild"><strong>removeChild</strong></a>(self, child)</dt><dd><tt>removeChild&nbsp;-&nbsp;Remove&nbsp;a&nbsp;child,&nbsp;if&nbsp;present.<br>
 &nbsp;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;@param&nbsp;child&nbsp;-&nbsp;The&nbsp;child&nbsp;to&nbsp;remove<br>
@@ -184,6 +198,29 @@ Use&nbsp;the&nbsp;getters&nbsp;and&nbsp;setters&nbsp;instead&nbsp;of&nbsp;attrib
 &nbsp;<br>
 @param&nbsp;attrName&nbsp;&lt;str&gt;&nbsp;-&nbsp;The&nbsp;name&nbsp;of&nbsp;the&nbsp;attribute<br>
 @param&nbsp;attrValue&nbsp;&lt;str&gt;&nbsp;-&nbsp;The&nbsp;value&nbsp;of&nbsp;the&nbsp;attribute</tt></dd></dl>
+
+<dl><dt><a name="AdvancedTag-setStyle"><strong>setStyle</strong></a>(self, styleName, styleValue)</dt><dd><tt>setStyle&nbsp;-&nbsp;Sets&nbsp;a&nbsp;style&nbsp;param.&nbsp;Example:&nbsp;"display",&nbsp;"block"<br>
+&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;If&nbsp;you&nbsp;need&nbsp;to&nbsp;set&nbsp;many&nbsp;styles&nbsp;on&nbsp;an&nbsp;element,&nbsp;use&nbsp;setStyles&nbsp;instead.&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;It&nbsp;takes&nbsp;a&nbsp;dictionary&nbsp;of&nbsp;attribute,&nbsp;value&nbsp;pairs&nbsp;and&nbsp;applies&nbsp;it&nbsp;all&nbsp;in&nbsp;one&nbsp;go&nbsp;(faster)<br>
+&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;To&nbsp;remove&nbsp;a&nbsp;style,&nbsp;set&nbsp;its&nbsp;value&nbsp;to&nbsp;empty&nbsp;string.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;When&nbsp;all&nbsp;styles&nbsp;are&nbsp;removed,&nbsp;the&nbsp;"style"&nbsp;attribute&nbsp;will&nbsp;be&nbsp;nullified.<br>
+&nbsp;<br>
+@param&nbsp;styleName&nbsp;-&nbsp;The&nbsp;name&nbsp;of&nbsp;the&nbsp;style&nbsp;element<br>
+@param&nbsp;styleValue&nbsp;-&nbsp;The&nbsp;value&nbsp;of&nbsp;which&nbsp;to&nbsp;assign&nbsp;the&nbsp;style&nbsp;element<br>
+&nbsp;<br>
+@return&nbsp;-&nbsp;String&nbsp;of&nbsp;current&nbsp;value&nbsp;of&nbsp;"style"&nbsp;after&nbsp;change&nbsp;is&nbsp;made.</tt></dd></dl>
+
+<dl><dt><a name="AdvancedTag-setStyles"><strong>setStyles</strong></a>(self, styleUpdatesDict)</dt><dd><tt>setStyles&nbsp;-&nbsp;Sets&nbsp;one&nbsp;or&nbsp;more&nbsp;style&nbsp;params.&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;This&nbsp;all&nbsp;happens&nbsp;in&nbsp;one&nbsp;shot,&nbsp;so&nbsp;it&nbsp;is&nbsp;much&nbsp;much&nbsp;faster&nbsp;than&nbsp;calling&nbsp;setStyle&nbsp;for&nbsp;every&nbsp;value.<br>
+&nbsp;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;To&nbsp;remove&nbsp;a&nbsp;style,&nbsp;set&nbsp;its&nbsp;value&nbsp;to&nbsp;empty&nbsp;string.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;When&nbsp;all&nbsp;styles&nbsp;are&nbsp;removed,&nbsp;the&nbsp;"style"&nbsp;attribute&nbsp;will&nbsp;be&nbsp;nullified.<br>
+&nbsp;<br>
+@param&nbsp;styleUpdatesDict&nbsp;-&nbsp;Dictionary&nbsp;of&nbsp;attribute&nbsp;:&nbsp;value&nbsp;styles.<br>
+&nbsp;<br>
+@return&nbsp;-&nbsp;String&nbsp;of&nbsp;current&nbsp;value&nbsp;of&nbsp;"style"&nbsp;after&nbsp;change&nbsp;is&nbsp;made.</tt></dd></dl>
 
 <hr>
 Data descriptors defined here:<br>
